--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb+srv://julieanjana:julieanjana123@cluster0.rwjfi2e.mongodb.net
+MONGODB_URI=mongodb+srv://julieanjana:julieanjana123@cluster0.lpocpbp.mongodb.net
 
 # clerk keys
 CLERK_PUBLISHABLE_KEY=pk_test_dW5pcXVlLWxpb25lc3MtNi5jbGVyay5hY2NvdW50cy5kZXYk
