--- a/server/.env
+++ b/server/.env
@@ -1,8 +1,7 @@
+MONGODB_URI=mongodb+srv://chinthana:greatstack123@cluster0.1isklos.mongodb.net
 
-MONGODB_URI=mongodb+srv://julieanjana:julieanjana123@cluster0.n21q6cf.mongodb.net
 
-
-CLERK_PUBLISHABLE_KEY=pk_test_YWxpdmUtaGFtc3Rlci0wLmNsZXJrLmFjY291bnRzLmRldiQ
-CLERK_SECRET_KEY=sk_test_PBule1vjpHWKRBUhokdGh2yeiZOKSycxV7MDuWxZwq
-CLERK_WEBHOOK_SECRET=whsec_f5Mg4UNS8SCRv5sAixRmeyqiOt9Tf5Ef
-
+# Clerk Keys
+CLERK_PUBLISHABLE_KEY=YOUR_PUBLISHABLE_KEY
+CLERK_SECRET_KEY=YOUR_SECRET_KEY
+CLERK_WEBHOOK_SECRET=whsec_iev+NwL/akW5FQEnfu6H60i/7fttY2os
